--- a/index.html
+++ b/index.html
@@ -85,6 +85,80 @@
                 </div>
             </div>
         </div>
+        <div id="page5">
+            <h1>UPDATES</h1>
+            <div class="elem">
+                <div class="el1"><h5>MENS<br>FASHION</h5></div>
+                <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDB8fHBvcnRyYWl0fGVufDB8fDB8fHww" alt="">
+                <div class="el2"></div>
+                <div class="el3">
+                    <h2>Khadim & Tom Ford</h2>
+                    <h6>25TH MARCH 2020</h6>
+                </div>
+            </div>
+            <div class="elem">
+                <div class="el1"><h5>WOMENS<br> FASHION</h5></div>
+                <img src="https://images.unsplash.com/photo-1581403341630-a6e0b9d2d257?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjJ8fHBvcnRyYWl0fGVufDB8fDB8fHww" alt="">
+
+                <div class="el3">
+                    <h2>Arena Homme</h2>
+                    <h6>3RD FEBRUARY 2020</h6>
+                </div>
+            </div>
+            <div class="elem">
+                <div class="el1"><h5>SPECIAL<br> VIEW</h5></div>
+                <img src="https://images.unsplash.com/photo-1531384441138-2736e62e0919?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NzZ8fHBvcnRyYWl0fGVufDB8fDB8fHww" alt="">
+
+                <div class="el3">
+                    <h2>Jing for Wonderland</h2>
+                    <h6>14TH JANUARY 2020</h6>
+                </div>
+            </div>
+            <div class="elem">
+                <div class="el1"><h5>MODEL<br> TALKS</h5></div>
+                <img src="https://plus.unsplash.com/premium_photo-1673734625879-2dd5410bc3e1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8ODV8fHBvcnRyYWl0fGVufDB8fDB8fHww" alt="">
+
+                <div class="el3">
+                    <h2>Glass X Belle</h2>
+                    <h6>8TH JANUARY 2020</h6>
+                </div>
+            </div>
+        </div>
+        <div id="marque">
+            <h1>Premier Models 2020</h1>
+            <h1>Premier Models 2020</h1>
+            <h1>Premier Models 2020</h1>
+            <h1>Premier Models 2020</h1>
+            <h1>Premier Models 2020</h1>
+            <h1>Premier Models 2020</h1>
+            <h1>Premier Models 2020</h1>
+        </div>
+        <div id="page6">
+            <img src="https://images.unsplash.com/photo-1493655161922-ef98929de9d8?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+        </div>
+        <div id="footer">
+            <div id="footgrid">
+                <div id="foot1">
+                    <h1>premier</h1>
+                    <h3>Models</h3>
+                </div>
+                <div id="foot2">
+                    <h3>Women / Men</h3>
+                </div>
+                <div id="foot3">
+                    <div id="ftop">
+                        <h3>Agency / Blog / Information / Contact us</h3>
+                    </div>
+                    <div id="fbottom">
+                        <h4> <i class="ri-instagram-line"></i> <i class="ri-twitter-x-line"></i>
+                            <i class="ri-facebook-box-fill"></i><i class="ri-youtube-fill"></i>
+                            <i class="ri-linkedin-fill"></i></h4>
+                        <h4 class="btext">©All content Copyright</h4>
+                <h4><span>PREMIER MODELS</span>Inc. 1981-2020 / or thier respective<br>owners where indicated</h4>
+            </div>
+            </div>
+        </div>
+        </div>
     </div>
 </body>
 </html>
